[FIX] Typo fixed in email address.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@
 Vicomtech-ik4
 Gorka Epelde gepelde@vicomtech.org
 Andoni Mujika amujika@vicomtech.org
-Roberto Álvarez aalvarez@vicomtech.org
+Roberto Álvarez ralvarez@vicomtech.org
 Peter Leškovský pleskovsky@vicomtech.org
 
 NUI Galway
